// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gutter lg 1`] = `
.pf-l-split__item {
  display: block;
}
.pf-l-split.pf-m-gutter {
  display: flex;
  flex-wrap: nowrap;
  padding: 0px;
  margin: 0px;
}

<Split
  className=""
  component="div"
  gutter="lg"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`Gutter md 1`] = `
.pf-l-split__item {
  display: block;
}
.pf-l-split.pf-m-gutter {
  display: flex;
  flex-wrap: nowrap;
  padding: 0px;
  margin: 0px;
}

<Split
  className=""
  component="div"
  gutter="md"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`Gutter sm 1`] = `
.pf-l-split__item {
  display: block;
}
.pf-l-split.pf-m-gutter {
  display: flex;
  flex-wrap: nowrap;
  padding: 0px;
  margin: 0px;
}

<Split
  className=""
  component="div"
  gutter="sm"
>
  <div
    className="pf-l-split pf-m-gutter"
  >
    <SplitItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic Content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isMain 1`] = `
.pf-l-split__item.pf-m-main {
  display: block;
}
.pf-l-split {
  display: flex;
  flex-wrap: nowrap;
  padding: 0px;
  margin: 0px;
}

<Split
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-split"
  >
    <SplitItem
      className=""
      isMain={true}
    >
      <div
        className="pf-l-split__item pf-m-main"
      >
        Main content
      </div>
    </SplitItem>
  </div>
</Split>
`;

exports[`isMain defaults to false 1`] = `
.pf-l-split__item {
  display: block;
}
.pf-l-split {
  display: flex;
  flex-wrap: nowrap;
  padding: 0px;
  margin: 0px;
}

<Split
  className=""
  component="div"
  gutter={null}
>
  <div
    className="pf-l-split"
  >
    <SplitItem
      className=""
      isMain={false}
    >
      <div
        className="pf-l-split__item"
      >
        Basic content
      </div>
    </SplitItem>
  </div>
</Split>
`;
